fix horizontal scroll

--- a/index.css
+++ b/index.css
@@ -19,6 +19,14 @@
     font-style: normal;
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     width: 100%;
     min-height: 100vh;
